djvusmooth (0.2.14) UNRELEASED; urgency=low

  * Add “Open recent” submenu.
    https://bitbucket.org/jwilk/djvusmooth/issue/7
  * Do not abort opening a new file if user chose to save the current one.
  * Allow removing the whole outline by selecting root element in the sidebar
    and pressing Delete.
    + Remove menu item “Edit → Outline → Remove all”; it's no longer needed.
  * Improve the manual page, as per man-pages(7) recommendations:
    - Remove the “AUTHOR” section.
    - Rename the “ENVIRONMENT VARIABLES” section as “ENVIRONMENT”.
    - Make “PORTABILITY” and “REPORTING BUGS” subsections of the “BUGS”
      section.
  * Improve the setup script:
    + Make “setup.py clean -a” remove compiled manual page (unless it was built
      by “setup.py sdist”).
    + Fix compatiblity with Python 2.5 and 2.6 (broken in 0.2.12).

 -- Jakub Wilk <jwilk@jwilk.net>  Mon, 18 Feb 2013 23:37:25 +0100

djvusmooth (0.2.13) unstable; urgency=low

  * Add keyboard shortcuts for “Zoom in” and “Zoom out”.
    https://bitbucket.org/jwilk/djvusmooth/issue/8
  * Fix editing text in external editor: when a zone broader than line without
    sub-zones existed, djvusmooth incorrectly skipped it when importing text.
    Thanks to Janusz S. Bień for the bug report.
  * Fix segmentation fault on shutdown.
    Thanks to Janusz S. Bień for the bug report.

 -- Jakub Wilk <jwilk@jwilk.net>  Tue, 02 Oct 2012 12:02:42 +0200

djvusmooth (0.2.12) unstable; urgency=low

  * Install desktop file.
  * Update the Russian translation, thanks to Kyrill Detinov.
  * Add Spanish translation, contributed by C. Daniel Sanchez R.
  * Rename menu item “Edit → Outline → Remove” to “… → Remove all”.
    Thanks to Maxim Leyenson for the bug report.
  * Use our own minimal XDG Base Directory implementation instead of PyXDG.

 -- Jakub Wilk <jwilk@jwilk.net>  Wed, 13 Jun 2012 20:53:49 +0200

djvusmooth (0.2.11) unstable; urgency=low

  * Let the setup.py script build and install binary message catalogs.